--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --contentBase src --port 3000 --hot --host 192.168.0.109"
+    "dev": "webpack-dev-server --open --contentBase src --port 3000 --hot --host 192.168.0.125"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
