--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --contentBase src --port 3000 --hot --host 192.168.0.111"
+    "dev": "webpack-dev-server --open --contentBase src --port 3000 --hot --host 192.168.0.106"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
